# HSE-ML-Course

./: .gitattributes  pyproject.toml
data/: test_df_after_part_1.csv  train_df_after_part_1.csv
models/: hw1_ridge_model.pkl  hw1_scaler.pkl
notebooks/: AI_HW3_Classification_base.ipynb  AI_HW4_woodenML_base_2026.ipynb  AI_HW5_boosting_base.ipynb  HW3_Classification_base.ipynb
notebooks/stepik/: GD_task.ipynb  LinReg_task.ipynb
webapp/: pyproject.toml
