[project]
name = "webapp"
version = "0.1.0"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
